--- a/genesis-translations/hu_HU.po
+++ b/genesis-translations/hu_HU.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Genesis 1.9 package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2013-01-31 16:43:55+0000\n"
+"PO-Revision-Date: 2013-05-16 11:59:41+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1685,4 +1685,4 @@ msgstr "Szerző Archívum oldal mutatása?"
 
 #: search.php:28
 msgid "Search Results for:"
-msgstr "Keresés eredménye:"
+msgstr "Találatok erre:"
