--- a/genesis20/it_IT.po
+++ b/genesis20/it_IT.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Genesis 2.0 package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2013-12-09 16:37:15+0000\n"
+"PO-Revision-Date: 2014-03-03 13:40:35+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,7 +12,7 @@ msgstr ""
 
 #: lib/admin/import-export.php:74
 msgid "You can import a file you've previously exported. The file name will start with %s followed by one or more strings indicating which settings it contains, finally followed by the date and time it was exported."
-msgstr ""
+msgstr "Puoi importare un file che hai precedentemente esportato. Il nome del file inizia con %s seguito da una o più stringhe indicanti quali impostazioni contiene, seguite dalla data e dall'ora in cui è stato esportato."
 
 #: lib/admin/cpt-archive-settings.php:260
 msgid "The Custom Document Title sets the page title as seen in browsers and search engines. "
@@ -1787,7 +1787,7 @@ msgstr ""
 
 #: lib/structure/search.php:31
 msgid "Search this website"
-msgstr ""
+msgstr "Cerca nel sito"
 
 #: lib/widgets/user-profile-widget.php:43
 msgid "Read More"
