--- a/genesis20/bg_BG.po
+++ b/genesis20/bg_BG.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Genesis 2.0 package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2014-03-03 13:38:30+0000\n"
+"PO-Revision-Date: 2014-04-11 15:34:10+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -903,7 +903,7 @@ msgstr "Маркирани с"
 
 #: lib/shortcodes/post.php:333 lib/shortcodes/post.php:375
 msgid "Filed Under: "
-msgstr "Пила под"
+msgstr "Пила под: "
 
 #: lib/shortcodes/post.php:423 lib/structure/comments.php:233
 #: lib/structure/comments.php:298 lib/structure/post.php:280
