--- a/genesis-translations/sv_SE.po
+++ b/genesis-translations/sv_SE.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Genesis 1.9 package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2013-05-16 11:57:31+0000\n"
+"PO-Revision-Date: 2014-04-12 08:22:17+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,7 +12,7 @@ msgstr ""
 
 #: lib/admin/whats-new.php:72
 msgid "You may notice that the default Genesis style sheet is a bit shorter, and on the front end looks different. We've updated the default design and extended the width of the layout to 1152px. Now you've got more real estate to showcase your content."
-msgstr ""
+msgstr "Du kanske märker att Genesis standard-stylesheet är lite kortare, och på frontend ser annorlunda ut. Vi har uppdaterat standarddesignen och utökat bredden av layouten till 1152px. Nu har du mer yta att visa upp ditt innehåll på."
 
 #: 404.php:33
 msgid "Not Found, Error 404"
@@ -210,7 +210,7 @@ msgstr "Misslyckades med att spara inställningar."
 
 #: lib/admin/seo-settings.php:173
 msgid "Document Title Settings"
-msgstr ""
+msgstr "Dokumenttitel-inställningar"
 
 #: lib/admin/seo-settings.php:174
 msgid "Homepage Settings"
@@ -226,27 +226,27 @@ msgstr "Arkivinställningar"
 
 #: lib/admin/seo-settings.php:194
 msgid "The document title (%s) is the single most important element in your document source for <abbr title=\"Search engine optimization\">SEO</abbr>. It succinctly informs search engines of what information is contained in the document. The title can, and should, be different on each page, but these options will help you control what it will look like by default."
-msgstr ""
+msgstr "Dokumentets titel (%s) är den enskilt viktigaste delen i dokumentets källa för <abbr title=\"Sökmotoroptimering\">SEO</abbr>. Den informerar kortfattat sökmotorer vilken information som finns i dokumentet. Titeln kan, och bör, vara olika på varje sida, men dessa alternativ kommer att hjälpa dig att kontrollera hur det kommer att se ut som standard."
 
 #: lib/admin/seo-settings.php:196
 msgid "<strong>By default</strong>, the home page document title will contain the site title, the single post and page document titles will contain the post or page title, the archive pages will contain the archive type, etc."
-msgstr ""
+msgstr "<strong>Som standard</strong>, kommer startsidans dokumentstitel innehålla sidans titel, enskilda inläggs- och siddokumentstitlar kommer att innehålla inläggets eller sidans titel, arkivsidor kommer att innehålla arkivtypen, etc."
 
 #: lib/admin/seo-settings.php:200
 msgid "Add site description (tagline) to %s on home page?"
-msgstr ""
+msgstr "Lägg till sidbeskrivning (tagline) till %s på startsidan?"
 
 #: lib/admin/seo-settings.php:205
 msgid "Add site name to %s on inner pages?"
-msgstr ""
+msgstr "Lägg till sidnamn till %s på inre sidor?"
 
 #: lib/admin/seo-settings.php:209
 msgid "Document Title Additions Location:"
-msgstr ""
+msgstr "Plats för dokumenttitelstillägg:"
 
 #: lib/admin/seo-settings.php:210
 msgid "Determines which side the added title text will go on."
-msgstr ""
+msgstr "Avgör på vilken sida den tillagda titeltexten kommer att vara på."
 
 #: lib/admin/seo-settings.php:214 lib/widgets/featured-page-widget.php:191
 #: lib/widgets/featured-post-widget.php:290
@@ -264,11 +264,11 @@ msgstr "Höger"
 
 #: lib/admin/seo-settings.php:222
 msgid "Document Title Separator:"
-msgstr ""
+msgstr "Separator för dokumenttitel:"
 
 #: lib/admin/seo-settings.php:224
 msgid "If the title consists of two parts (original title and optional addition), then the separator will go in between them."
-msgstr ""
+msgstr "Om titeln består av två delar (originaltitel och valfritt tillägg), då kommer separatorn visas mellan dem."
 
 #: lib/admin/seo-settings.php:245
 msgid "Which text would you like to be wrapped in %s tags?"
@@ -276,7 +276,7 @@ msgstr "Vilken text skulle du vilja ha %s-taggad?"
 
 #: lib/admin/seo-settings.php:246
 msgid "The %s tag is, arguably, the second most important <abbr title=\"Search engine optimization\">SEO</abbr> tag in the document source. Choose wisely."
-msgstr ""
+msgstr "%s-taggen är, utan tvekan, den näst viktigaste <abbr title=\"Sökmotoroptimering\">SEO </abbr>-taggen i dokumentets källa. Välj klokt."
 
 #: lib/admin/seo-settings.php:250
 msgid "Site Title"
@@ -292,23 +292,23 @@ msgstr "Varken eller. Jag vill manuellt styra min egen text på hemsidan"
 
 #: lib/admin/seo-settings.php:260
 msgid "Homepage Document Title:"
-msgstr ""
+msgstr "Startsidans dokumenttitel:"
 
 #: lib/admin/seo-settings.php:262
 msgid "If you leave the document title field blank, your site&#8217;s title will be used instead."
-msgstr ""
+msgstr "Om du lämnar fältet för dokumenttitel tomt, kommer webbplatsens titel användas i stället."
 
 #: lib/admin/seo-settings.php:266
 msgid "Home Meta Description:"
-msgstr ""
+msgstr "Startsidans Meta-beskrivning:"
 
 #: lib/admin/seo-settings.php:268
 msgid "The meta description can be used to determine the text used under the title on search engine results pages."
-msgstr ""
+msgstr "Meta beskrivningen kan användas för att bestämma den text som används under titeln på sökmotorers resultatsidor."
 
 #: lib/admin/seo-settings.php:272
 msgid "Home Meta Keywords (comma separated):"
-msgstr ""
+msgstr "Startsidans Meta-nyckelord (kommaseparerade):"
 
 #: lib/admin/seo-settings.php:274
 msgid "Keywords are generally ignored by Search Engines."
@@ -395,7 +395,7 @@ msgstr "Tillämpa%s på sökarkiv?"
 
 #: lib/admin/seo-settings.php:385
 msgid "Some search engines will cache pages in your site (e.g. Google Cache). The %1$s tag will prevent them from doing so. Choose which archives you want %1$s applied to."
-msgstr ""
+msgstr "Vissa sökmotorer kommer att cacha sidor på din webbplats (t.ex. Google Cache). %1$s-taggen kommer att hindra dem från att göra detta. Välj vilka arkiv du vill %1$s ska tillämpas på."
 
 #: lib/admin/seo-settings.php:389
 msgid "Apply %s to Entire Site?"
@@ -489,11 +489,11 @@ msgstr "Standardlayout"
 
 #: lib/admin/theme-settings.php:230
 msgid "Header"
-msgstr ""
+msgstr "Sidhuvud"
 
 #: lib/admin/theme-settings.php:233
 msgid "Navigation"
-msgstr ""
+msgstr "Navigation"
 
 #: lib/admin/theme-settings.php:236
 msgid "Breadcrumbs"
@@ -1319,7 +1319,7 @@ msgstr "Nästa sida"
 
 #: lib/structure/search.php:23
 msgid "Search this website"
-msgstr ""
+msgstr "Sök på webbplatsen"
 
 #: lib/structure/search.php:25
 msgid "Search"
